<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">jhodgson-aCounter</string>
    <string name="action_settings">Settings</string>
    <string name="new_counter">New</string>
    <string name="edit">Edit</string>
    <string name="counter_text">Counter Name</string>
    <string name="counter_default"> Default </string>
    <string name="back_main">Back</string>
    <string name="counter_number">0</string>
    <string name="increment">+</string>
    <string name="title_activity_counter">CounterActivity</string>
    <string name="reset">Reset</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="rename_text">Rename to:</string>
    <string name="verify_text">Are you sure?</string>
 	<string name="stats_name">Default</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="global_stats">Global Stats</string>
    <string name="individual_stats">Counter Stats</string>

    <string-array name="sort_array">
        <item>Highest to Lowest</item>
        <item>Lowest to Highest</item>
    </string-array>

    <string name="sort_prompt">Sort</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
