<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
  
    <TextView
        android:id="@+id/counter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/counter_default"
        android:textSize="20sp"
        android:singleLine="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" />
        
     <TextView
        android:id="@+id/counter_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/counter_name"
        android:layout_centerHorizontal="true"
        android:text="@string/counter_number"
        android:textColor="@color/yellow"
        android:textSize="100sp" />
        
     <Button
    		android:id="@+id/increment"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:text="@string/increment"
        	android:layout_below="@id/counter_number"
        	android:layout_above="@+id/layout_one"
        	android:textSize="150sp" />
        	 
   	<LinearLayout
    	android:id="@id/layout_one"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_above="@+id/layout_two">
    
   		<Button
    		android:id="@+id/reset"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:text="@string/reset"
        	android:layout_weight="1"/>
        	
     <Button
    		android:id="@+id/individual_stats"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:text="@string/individual_stats"
        	android:layout_weight="1"/> 
    </LinearLayout>
     	    	 
   	<LinearLayout
    	android:id="@id/layout_two"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_above="@+id/back_main">
        	
     <Button
    		android:id="@+id/rename"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:text="@string/rename"
        	android:layout_weight="1"/>
        	
     <Button
    		android:id="@+id/delete"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:text="@string/delete"
        	android:layout_weight="1"/> 
   	</LinearLayout>
   	       
    <Button
    		android:id="@id/back_main"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/back_main"
        	android:layout_alignParentBottom="true" />
    

</RelativeLayout>
