<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
  
    <TextView
        android:id="@+id/counter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/counter_default"
        android:textSize="20dp" />
        
     <TextView
        android:id="@+id/counter_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/counter_name"
        android:layout_centerHorizontal="true"
        android:text="@string/counter_number"
        android:textColor="@color/yellow"
        android:textSize="100dp" />
        
     <Button
    		android:id="@+id/increment"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:text="@string/increment"
        	android:layout_below="@id/counter_number"
        	android:layout_above="@+id/reset"
        	 android:textSize="200dp" />
    
    <Button
    		android:id="@id/reset"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/reset"
        	android:layout_above="@+id/individual_stats" />
        	
     <Button
    		android:id="@id/individual_stats"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/stats"
        	android:layout_above="@+id/back_main" />
        
    <Button
    		android:id="@id/back_main"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/back_main"
        	android:layout_alignParentBottom="true" />
    

</RelativeLayout>
